# NES-Emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
.github/workflows/: build.yml
src/: CMakeLists.txt  Renderer.h  Window.h  main.cpp  pch.h
src/Emulator/: CPU.cpp  CPU.h  Emulator.cpp  Emulator.h  EmulatorSettings.h  Macros.h  Memory.h  NESCPU.cpp  NESCPU.h  NESCartridge.cpp  NESCartridge.h  NESMapper.h  NESMemory.cpp  NESMemory.h  NESPPU.cpp  NESPPU.h  NROMMapper.h  OpCodes.h  OpcodeHandler.cpp  OpcodeHandler.h  cpp.hint  emulator_pch.cpp  emulator_pch.h  pch.h
src/Engine/: InputManager.cpp  InputManager.h  Renderer.h  SDLRenderer.cpp  SDLRenderer.h  SDLWindow.h  ServiceLocator.cpp  ServiceLocator.h  Singleton.h  Timer.h  Window.h
